# akm

./: .gitignore  AGENTS.md  LICENSE  README.md  logo.icns  pyproject.toml  setup.py
.claude/hooks/: markdown_kb_hook_common.py  pre_compact.py  stop.py  user_prompt_submit.py
.codex/: hooks.json
.codex/hooks/: markdown_kb_hook_common.py  pre_compact.py  stop.py  user_prompt_submit.py
akm/: __init__.py  adapter.py  agent.py  audit.py  cli.py  config.py  cost_estimate.py  db.py  health.py  http_client_pool.py  key_pool.py  markdown_kb_hook.py  menubar.py  models.py  proxy.py  server.py  usage_flags.py  usage_query.py
akm/adapters/: __init__.py  anthropic_messages.py  chat_adapter.py  chat_to_responses.py  messages_adapter.py  responses_adapter.py
akm/plugins/: __init__.py  base.py  context.py  models.py  plugin_manager.py
akm/static/: agent-form-modal.js  akm-ui.js  chat-viewer.js  json-viewer.js  json-worker.js
akm/templates/: _header.html  _layout.html  _sidebar.html  _styles.html  about.html  (+7 more)
docs/: release-guide.md
plugins/: README.md
scripts/: build_app.sh  build_m1_dmg.sh  mcp_image_server.py  translate-mcp.py
tests/: test_adapters.py  test_agent.py  test_audit.py  test_budget_and_mcp_plugins.py  test_cli.py  test_data_filter_guard_plugin.py  test_db.py  test_e2e.py  test_frontend_static_server_plugin.py  test_key_pool.py  test_markdown_kb_hook.py  test_markdown_kb_hook_wrappers.py  test_mcp_image_server.py  test_model_matcher_plugin.py  test_new_local_plugins.py  test_plugin_guards.py  test_proxy.py  test_request_redactor_plugin.py  test_server.py
(+79 files in other folders)
