[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-key-manager"
version = "0.1.16"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
    "rumps>=0.4.0",
    "pillow>=10.0",
    "python-multipart>=0.0.5",
    "numpy>=1.26.0",
    "jieba3>=1.0.2",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
akm = "akm.cli:main"
akm-menubar = "akm.menubar:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
akm = ["templates/*.html", "static/*.js", "plugins/**/*.json", "plugins/**/*.html"]
